@@ -1,3 +1,10 @@
+1999-11-17  Iain Holmes  <ih@csd.abdn.ac.uk>
+
+	* gnomelib-init.h: Removed gnomelib_init.
+
+	* gnome10-compat.[ch]: Added gnomelib_init as a function to pass fake
+	arguments to gnome_program_init.
+
 1999-11-16  Elliot Lee  <sopwith@redhat.com>
 
 	* gnome-url.[ch]: Add a callback for history maintainance.
